Implenentación de fomrmulario de Evento y participante

--- a/HyruleEvents/src/main/java/com/mycompany/hyruleevents/fronted/consultas/ConsultasFrame.form
+++ b/HyruleEvents/src/main/java/com/mycompany/hyruleevents/fronted/consultas/ConsultasFrame.form
@@ -6,7 +6,7 @@
       <SubComponents>
         <Menu class="javax.swing.JMenu" name="cosas">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Cosas"/>
+            <Property name="text" type="java.lang.String" value="Evento"/>
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="cosasMouseClicked"/>
@@ -18,8 +18,11 @@
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="5b" green="b0" red="f6" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Edit"/>
+            <Property name="text" type="java.lang.String" value="Participante"/>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jMenu4MouseClicked"/>
+          </Events>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu5">
           <Properties>
